# Safetrix

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  build_verbose.txt
data/: safetrix.db
include/common/: AppTypes.h  ErrorCode.h
include/core/: Security.h  TaskManager.h  TransferEngine.h  security.c  task_manager.c  transfer_engine.c
include/data/: Logger.h  Persistence.h
include/ui/: MainWindow.h  ProgressBar.h  startup.h
include/utils/: Algorithm.h  Alogorithm.h  FileUtils.h
src/: main.c
src/core/: security.c  task_manager.c  transfer_engine.c
src/data/: logger.c  logger.h  persistence.c  persistence.h
src/tests/: test_security_flow.c
src/ui/: main_window.c  progress_bar.c  startup.c  ui_resources.c
src/utils/: algorithm.c  file_utils.c
